Button Styling und hover effect

--- a/about.html
+++ b/about.html
@@ -9,22 +9,37 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+   
+    <header id="burgerOn">
       <h1 class="logo">Rania<span>Web</span></h1>
-      <div class="burger-menu">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+      <a title="link" href="#burgerOn">
+        <div class="burgerBtn burger-menu">
+          <div></div>
+          <div></div>
+          <div></div></div
+      ></a>
+
+      <a title="link" class="burgerOff" href="#">
+        <di class="burgerOff burger-menu">
+          <div></div>
+          <div></div>
+          <div></div></di >
+      </a>
+
+      <ul class="burgerList">
+        <li><a href="/home.html">Home</a></li>
+        <li><a href="/about.html">about</a></li>
+        <li><a href="/contact.html"> contact</a></li>
+      </ul>
+
       <nav>
         <ul>
-          <li><a href="home.html">home</a></li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="contact.html"> contact</a></li>
+          <li><a href="/home.html">Home</a></li>
+          <li><a href="/about.html">about</a></li>
+          <li><a href="/contact.html"> contact</a></li>
         </ul>
       </nav>
     </header>
-
     <main>
       <section class="container-about">
         <div class="img1">
@@ -41,18 +56,18 @@
                 Website. I create adaptable and responsive websites using simplicity,
                 clarity and functionality where every pixel counts.
                 </p>
-                <button> <a href="/home.html"> Retour</a> </button>
+                 <a title="link to home" href="/home.html">Back </a> 
             </div>
     </main>
     <footer>
       <div class="social">
-        <a
-          href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.facebook.com%2Fprivacy%2Fconsent%2Fuser_cookie_choice%2F%3Fsource%3Dpft_user_cookie_choice"
+        <a title="link to facebook"
+          href="https://de-de.facebook.com/"
         >
           <i class="fab fa-facebook-f"></i
         ></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-dribbble"></i></a>
+        <a title="link to instagram" href="#"><i class="fab fa-instagram"></i></a>
+        <a title="link to web" href="#"><i class="fab fa-dribbble"></i></a>
       </div>
       <p>CopyRight By Raouia Mhamdi</p>
     </footer>
