Portfolio ist bereit zum checken

--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
             </p>
 
             <p>
-              <a class="button" href="#">Read More</a>
+              <a class="button" href="./Dataprotection.html">Read More</a>
             </p>
           </div>
         </div>
@@ -120,7 +120,7 @@
             </p>
 
             <p>
-              <a class="button" href="#">Read More</a>
+              <a class="button" href="./read-more.html">Read More</a>
             </p>
           </div>
         </div>
@@ -137,7 +137,7 @@
             <p>professional advertising images and texts</p>
         
             <p>
-              <a class="button" href="#">Read More</a>
+              <a class="button" href="./read-more.html">Read More</a>
             </p>
           </div>
         </div>
@@ -158,7 +158,7 @@
 
 
             <p>
-              <a class="button" href="#">Read More</a>
+              <a class="button" href="./read-more.html">Read More</a>
             </p>
           </div>
 
